--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
                                 <img class="mt20 ml20 logo" src="images/logo-light2035.png" alt="" width="60px">
                                 <img class="mt10 ml20 logo-2" src="images/logo-dark2035.png" alt="" width="60px">
                             </a>
-                        </div>  
+                        </div> 
+                        <div id="logo">
+                            <a href="index.html">
+                                <img class="ml20 logo" src="images/logo-mininf-light.png" alt="" width="40px">
+                                <img class="mt5 ml20 logo-2" src="images/logo-mininf-dark.png" alt="" width="40px">
+                            </a>
+                        </div>
+                        <div id="logo">
+                            <a href="index.html">
+                                <img class="ml20 logo" src="images/logo-minobr-light.png" alt="" width="40px">
+                                <img class="mt5 ml20 logo-2" src="images/logo-minobr-dark.png" alt="" width="40px">
+                            </a>
+                        </div> 
                         <!-- logo close -->
 
                         <!-- small button begin -->
@@ -355,9 +367,18 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/panyukova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4>Панюкова Светлана Валерьевна, д.п.н., профессор, ректор Института дополнительного профессионального образования 4Портфолио.</h4></div>
+                                                            <div class="sc-name"><h4>Панюкова Светлана Валерьевна, д.п.н., профессор, ректор Института дополнительного профессионального образования 4Портфолио</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Организация сетевого взаимодействия вузов для онлайн-обучения студентов с инвалидностью</h3>
+                                                            </div>  
+                                                            <div class="clearfix"></div>                                                    
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/panyukova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4>Семенова Татьяна Вадимовна, Научный сотрудник Института образования, НИУ ВШЭ</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Консорциум "Доказательная цифровизация для успеха студентов": модель взаимодействия участников</h3>
                                                             </div>  
                                                             <div class="clearfix"></div>                                                    
                                                          </div>
@@ -1628,35 +1649,43 @@
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/istu.png" alt="">                                    
+                                    <img src="images/logo/istu.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/logo-udm.png" alt="" width="80px">                                    
+                                    <img src="images/logo-mininf-light.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/kupol.png">                                    
+                                    <img src="images/logo-minobr-light.png" alt="" height="80px">                                    
                                 </div>
-                            </div> 
+                            </div>
 
                             <div class="spacer-single"></div>
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/urfu.png" alt="">                                    
+                                    <img src="images/logo/kupol.png" height="80px">                                    
+                                </div>
+                            </div> 
+
+                            <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
+                                <div class="de_count sm-mb30">
+                                    <img src="images/logo-light2035.png" alt="" height="80px">                                    
                                 </div>
                             </div>  
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/vshe.png" alt="">                                    
+                                    <img src="images/logo/vshe.png" alt="" height="80px">                                    
                                 </div>
                             </div>
+
+                            <div class="spacer-single"></div>
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
@@ -1664,52 +1693,49 @@
                                 </div>
                             </div>
 
-
-                                <div class="spacer-single"></div>
-
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/sgups.png" alt="">                                    
+                                    <img src="images/logo/sgups.png" alt="" height="80px">                                    
                                 </div>
                             </div>   
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/polytech.png" alt="">                                    
+                                    <img src="images/logo/polytech.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
+                            <div class="spacer-single"></div>
+
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/tusur.png" alt="">                                    
+                                    <img src="images/logo/tusur.png" alt="" height="80px">                                    
                                 </div>
                             </div>
-
-                                <div class="spacer-single"></div>
-
+                            
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/u2035.png" alt="">                                    
+                                    <img src="images/logo/urfu.png" alt="" height="80px">                                    
                                 </div>
                             </div> 
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/tgu.png" alt="">                                    
+                                    <img src="images/logo/tgu.png" alt="" height="80px">                                    
+                                </div>
+                            </div>
+
+                            <div class="spacer-single"></div>
+
+                            <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
+                                <div class="de_count sm-mb30">
+                                    <img src="images/logo/bilain.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/vimpelcom.png" alt="" >                                    
-                                </div>
-                            </div>
-
-                                <div class="spacer-single"></div>
-
-                            <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
-                                <div class="de_count sm-mb30">
-                                    <img src="images/logo/stepik.png" alt="">                                    
+                                    <img src="images/logo/stepik.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
