--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                                                          </div> 
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/starshinova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Старшинова Татьяна Александровна, к.пед.н,доцент  Кафедра инженерной педагогики и психологии КНИТУ</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Интегративная подготовка преподавателей инженерных вузов к работе со студентами с инвалидностью и ОВЗ в on-line формате</h3>
@@ -812,7 +812,7 @@
                                                         <div class="schedule-item" data-toggle="collapse" data-parent="#accordion2" href="#day2_12">
                                                             <div class="sc-time">11:30 - 12:30<br>(МСК)</div>
                                                             <div class="sc-info">
-                                                                <h3>Панельная дискуссия: Трансформации системы СПО</h3>
+                                                                <h3>Панельная дискуссия: Дополнительное и среднее профессиональное образование в вузе: реализация образовательных проектов в вузе в условиях трансформации</h3>
                                                             </div>
                                                             <div class="sc-more mr10">
                                                               
@@ -853,7 +853,7 @@
                                                             <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name">Кулемин Иван Николаевич, к.п.н., директор муниципального бюджетного образовательного учреждения “Средняя общеобразовательная школа № 80 им. В.С. Тарасова”</div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Модель взаимодействия “Школа-техникум-вуз-предприятие” и ее роль в подготовке конкурентоспособных специалистов</h3>
                                                             </div> 
 
                                                             <div class="clearfix"></div>                                                           
@@ -863,20 +863,10 @@
                                                             <div class="sc-pic"><img src="images/team/arhipov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Архипов Игорь Олегович, к.т.н., доцент, директор института информатики и вычислительной техники ФГБОУ ВО “ИжГТУ имени М.Т. Калашникова”</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Подготовка IT-специалистов по схеме “Школа-техникум-вуз”</h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
-                                                         </div>
-
-                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/krilov.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4>Крылов Эдуард Геннадьевич, д.т.н., профессор кафедры “Механика” ФГБОУ ВО “ИжГТУ имени М.Т. Калашникова”</h4></div>
-                                                            <div class="sc-info">
-                                                            <h3></h3>
-                                                            </div>  
-
-                                                            <div class="clearfix"></div>                                                          
                                                          </div>
                                                     
                                                         </div>
@@ -1626,6 +1616,16 @@
 
                                 <h3>Скрябин Максим Александрович</h3>
                                 <span class="subtitle2">Консультант по проектированию обучения и учебной аналитике, к.ф.-м.н.</span>
+                            </div>
+                        </div>
+                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/starshinova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Старшинова Татьяна Александровна</h3>
+                                <span class="subtitle2">К.пед.н,доцент Кафедра инженерной педагогики и психологии КНИТУ</span>
                             </div>
                         </div>
 
