--- a/index.html
+++ b/index.html
@@ -50,18 +50,6 @@
                                 <img class="mt10 ml20 logo-2" src="images/logo-dark2035.png" alt="" width="60px">
                             </a>
                         </div> 
-                        <div id="logo">
-                            <a href="index.html">
-                                <img class="ml20 logo" src="images/logo-mininf-light.png" alt="" width="40px">
-                                <img class="mt5 ml20 logo-2" src="images/logo-mininf-dark.png" alt="" width="40px">
-                            </a>
-                        </div>
-                        <div id="logo">
-                            <a href="index.html">
-                                <img class="ml20 logo" src="images/logo-minobr-light.png" alt="" width="40px">
-                                <img class="mt5 ml20 logo-2" src="images/logo-minobr-dark.png" alt="" width="40px">
-                            </a>
-                        </div> 
                         <!-- logo close -->
 
                         <!-- small button begin -->
@@ -604,8 +592,8 @@
                                                          </div>
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4>Кочерова Вера Владимировна, ст. преподаватель Института цифровых систем ФГБОУ ВО “Ярославский государственный технический университет”</h4></div>
+                                                            <div class="sc-pic"><img src="images/team/kocherova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4>Кочерова Вера Владимировна, ст. преподаватель Института цифровых систем, ФГБОУ ВО “Ярославский государственный технический университет”</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Проектное управление на рынках НТИ: опыт реализации</h3>
                                                             </div> 
@@ -1127,7 +1115,7 @@
                                                     
                                                     
                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/kocherova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Кочерова Вера Владимировна, ст. преподаватель Института цифровых систем ФГБОУ ВО “Ярославский государственный технический университет”</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Инструменты vs Дизайн</h3>
@@ -1626,6 +1614,16 @@
 
                                 <h3>Старшинова Татьяна Александровна</h3>
                                 <span class="subtitle2">К.пед.н,доцент Кафедра инженерной педагогики и психологии КНИТУ</span>
+                            </div>
+                        </div>
+                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/kocherova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Кочерова Вера Владимировна</h3>
+                                <span class="subtitle2">Cт. преподаватель Института цифровых систем Ярославского государственного технического университета</span>
                             </div>
                         </div>
 
