--- a/index.html
+++ b/index.html
@@ -364,9 +364,17 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/panyukova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4>Семенова Татьяна Вадимовна, Научный сотрудник Института образования, НИУ ВШЭ</h4></div>
+                                                            <div class="sc-name"><h4>Семенова Татьяна Вадимовна, Научный сотрудник Института образования, НИУ ВШЭ, Москва</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Консорциум "Доказательная цифровизация для успеха студентов": модель взаимодействия участников</h3>
+                                                            </div>  
+                                                            <div class="clearfix"></div>                                                    
+                                                         </div>
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/andreeva.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4>Андреева Юлия Петровна, Научный сотрудник Института образования, НИУ ВШЭ</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Руководитель проектов, АНО ДПО "Высшая техническая школа"</h3>
                                                             </div>  
                                                             <div class="clearfix"></div>                                                    
                                                          </div>
