--- a/index.html
+++ b/index.html
@@ -1639,7 +1639,7 @@
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo-minobr-light.png" alt="" height="80px">                                    
+                                    <img src="images/" alt="" height="80px">                                    
                                 </div>
                             </div>
 
