--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                                          </div>
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/panyukova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/semenova.JPG" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Семенова Татьяна Вадимовна, Научный сотрудник Института образования, НИУ ВШЭ, Москва</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Консорциум "Доказательная цифровизация для успеха студентов": модель взаимодействия участников</h3>
@@ -372,9 +372,9 @@
                                                          </div>
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/andreeva.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4>Андреева Юлия Петровна, Научный сотрудник Института образования, НИУ ВШЭ</h4></div>
+                                                            <div class="sc-name"><h4>Андреева Юлия Петровна, Руководитель проектов, АНО ДПО "Высшая техническая школа"</h4></div>
                                                             <div class="sc-info">
-                                                            <h3>Руководитель проектов, АНО ДПО "Высшая техническая школа"</h3>
+                                                            <h3>Сопровождение построения индивидуальных образовательных траекторий</h3>
                                                             </div>  
                                                             <div class="clearfix"></div>                                                    
                                                          </div>
@@ -902,7 +902,7 @@
                                                         </div> 
                                                     
                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/popov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4>Попов Евгений Алексеевич, ведущий специалист по продуктовой дата-аналитике Университет 2035</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Работа с данными в образовании</h3>
@@ -1438,16 +1438,6 @@
                                 <span class="subtitle2">Научный сотрудник Института образования, НИУ ВШЭ, Москва</span>
                             </div>
                         </div> 
-                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
-                            <div class="profile_pic text-center sm-mb30">
-                                <figure class="picframe s2 mb30">
-                                    <img src="images/team/1.jpg" class="img-responsive" alt="">
-                                </figure>
-
-                                <h3>Емец Игорь Викторович</h3>
-                                <span class="subtitle2">Руководитель направления по работе с госсектором на территории Удмуртской Республики ПАО «ВымпелКом»</span>
-                            </div>
-                        </div>
 
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1460,8 +1450,6 @@
                             </div>
                         </div>
 
-                        <div class="clearfix"></div>
-
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
@@ -1472,6 +1460,7 @@
                                 <span class="subtitle2">К.п.н., с.н.с. Лаборатории проектирования деятельностного содержания образования ИСП МГПУ, координатор конкурсов EdCrunchAward, главный редактор журнала "Вопросы Интернет Образования"</span>
                             </div>
                         </div>
+                        <div class="clearfix"></div>
 
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1506,19 +1495,6 @@
                             </div>
                         </div>
 
-                        <div class="clearfix"></div>
-
-                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
-                            <div class="profile_pic text-center sm-mb30">
-                                <figure class="picframe s2 mb30">
-                                    <img src="images/team/1.jpg" class="img-responsive" alt="">
-                                </figure>
-
-                                <h3>Дьяченко Алексей Владимирович</h3>
-                                <span class="subtitle2">Генеральный директор ООО "Открытые технологии"</span>
-                            </div>
-                        </div>
-
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
@@ -1529,6 +1505,8 @@
                                 <span class="subtitle2">Руководитель учебно-методического центра компании Директ-Медиа. Руководитель онлайн-школы "Директ-Академия"</span>
                             </div>
                         </div>
+                        <div class="clearfix"></div>
+
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
@@ -1549,8 +1527,6 @@
                                 <span class="subtitle2">Д.пед.н, к.т.н. профессор, Действительный член Академии информатизации образования</span>
                             </div>
                         </div>
-
-                        <div class="clearfix"></div>
 
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1573,6 +1549,8 @@
                                 <span class="subtitle2">К.пед.н, доцент, руководитель РУМЦ ВятГУ</span>
                             </div>
                         </div>
+                        <div class="clearfix"></div>
+
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
@@ -1593,8 +1571,6 @@
                                 <span class="subtitle2">К.пед.н,доцент Кафедра инженерной педагогики и психологии КНИТУ</span>
                             </div>
                         </div>
-
-                        <div class="clearfix"></div>
                         
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1604,6 +1580,17 @@
 
                                 <h3>Кочерова Вера Владимировна</h3>
                                 <span class="subtitle2">Cт. преподаватель Института цифровых систем Ярославского государственного технического университета</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/popov.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Попов Евгений Алексеевич</h3>
+                                <span class="subtitle2">Ведущий специлаист по продуктовой дата-аналитеке Университет 2035</span>
                             </div>
                         </div>
 
@@ -1633,13 +1620,13 @@
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo-mininf-light.png" alt="" height="80px">                                    
+                                    <img src="images/logo/logo-mininf-light.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
                             <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo-minobr-light.png" alt="" height="80px">                                    
+                                    <img src="images/logo/logo-minobr-light.png" alt="" height="80px">                                    
                                 </div>
                             </div>
 
@@ -1711,12 +1698,6 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
-                                <div class="de_count sm-mb30">
-                                    <img src="images/logo/stepik.png" alt="" height="80px">                                    
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -1736,10 +1717,10 @@
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                             <div class="col-md-6 text-center">
-                                <p class="lead wow fadeInUp">По итогам нашей совместной работы будет подготовлен сборник трудов Международной научной конференции по проблемам цифровизации в образовании "Цифровизация инженерного образования", включающий статьи, посвященные лучшим практикам и инструментам формирования ключевых компетенций цифровой экономики и подготовки кадров.</p>
+                                <p class="lead wow fadeInUp">По итогам нашей совместной работы будет подготовлен сборник материалов и статей Международной онлайн конференции "Цифровизация инженерного образования", включающий материалы, посвященные лучшим практикам и инструментам формирования ключевых компетенций цифровой экономики</p>
                             </div>
                             <div class="col-md-6 text-center">
-                                <p class="lead wow fadeInUp">Сборник будет выпущен в электронном виде в авторской редакции, оформлен в соответствии с установленными требованиями и размещен на платформе научной электронной библиотеки и в РИНЦ.</p>  
+                                <p class="lead wow fadeInUp">Сборник будет выпущен в электронном виде в авторской редакции, оформлен в соответствии с установленными требованиями и размещен на платформе научной электронной библиотеки РИНЦ ( <a href="https://elibrary.ru/">elibrary.ru</a> )</p>  
                                 <p class="lead wow fadeInDown"><a href="doc/Требования_к_статьям 2021.doc">Скачать требования к статьям</a></p>                            
                                 <div class="spacer-single"></div>
                                 <div class="clearfix"></div>
