--- a/index.html
+++ b/index.html
@@ -1726,7 +1726,7 @@
                                 <p class="lead wow fadeInUp"><h4>По итогам международной онлайн конференции "Цифровизация инженерного образования" выпускается сборник материалов, размещаемый на платформе научной электронной библиотеки РИНЦ <br>( <a href="https://elibrary.ru/">elibrary.ru</a> )</h4></p>  
                                 <p class="lead wow fadeInUp"><h4>
                                 Материалы для публикации просим направить до 30 марта 2021 года на электроную почту <a>eedu@istu.ru</a></h4></p>
-                                <p class="lead wow fadeInDown"><a href="doc/Требования_к_статьям 2021.doc"><h4>Скачать требования к статьям</h4></a></p>
+                                <p class="lead wow fadeInDown"><a href="doc/article.doc"><h4>Скачать требования к статьям</h4></a></p>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="col-md-6 text-center">
