--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                                                             <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Бакуменко Ольга Аркадьевна</span><br> Ведущий аналитик: НИУ ВШЭ в Санкт-Петербурге, Центр организации науки и академического развития, Санкт-Петербург</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Цифровые бренды технических университетов</h3>
                                                             </div>
                                                             <div class="clearfix"></div>                                                           
                                                          </div>                              
@@ -1429,7 +1429,7 @@
                                 </figure>
 
                                 <h3>Юсова Марина Владимировна</h3>
-                                <span class="subtitle2">Начальник учебно-методического отдела Института открытого дистанционного образования ФГБОУ ВО "Новосибирский государственный педагогический университет", эксперт международного конкурса EdCrunch Award, Новосибирск</span>
+                                <span class="subtitle2">Начальник учебно-методического отдела Института открытого дистанционного образования, НГПУ, эксперт международного конкурса EdCrunch Award, Новосибирск</span>
                             </div>
                         </div>
 
@@ -1524,15 +1524,16 @@
                                 <span class="subtitle2">Cтарший преподаватель кафедры Корпоративной культуры университета "Синергия", Москва</span>
                             </div>
                         </div>
-                        
+
+
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
-                                    <img src="images/team/bashmakova.jpg" class="img-responsive" alt="">
+                                    <img src="images/team/popov.jpg" class="img-responsive" alt="">
                                 </figure>
 
-                                <h3>Башмакова Светлана Борисовна</h3>
-                                <span class="subtitle2">К.пед.н, доцент, руководитель РУМЦ ВятГУ, Киров</span>
+                                <h3>Попов Евгений Алексеевич</h3>
+                                <span class="subtitle2">Ведущий специлаист по продуктовой дата-аналитеке Университет 2035, Москва</span>
                             </div>
                         </div>
 
@@ -1549,17 +1550,6 @@
 
 
                         <div class="clearfix"></div>
-
-                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
-                            <div class="profile_pic text-center sm-mb30">
-                                <figure class="picframe s2 mb30">
-                                    <img src="images/team/starshinova.jpg" class="img-responsive" alt="">
-                                </figure>
-
-                                <h3>Старшинова Татьяна Александровна</h3>
-                                <span class="subtitle2">К.пед.н, доцент Кафедра инженерной педагогики и психологии КНИТУ, Казань</span>
-                            </div>
-                        </div>
                         
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -1575,11 +1565,11 @@
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
-                                    <img src="images/team/popov.jpg" class="img-responsive" alt="">
+                                    <img src="images/team/zolotuhina.jpg" class="img-responsive" alt="">
                                 </figure>
 
-                                <h3>Попов Евгений Алексеевич</h3>
-                                <span class="subtitle2">Ведущий специлаист по продуктовой дата-аналитеке Университет 2035, Москва</span>
+                                <h3>Золотухина Екатерина Викторовна</h3>
+                                <span class="subtitle2">Доктор химических наук, ведущий научный сотрудник, зав. лабораторией Института проблем химической физики РАН, Москва</span>
                             </div>
                         </div>
 
@@ -1699,7 +1689,7 @@
 
                              <div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
                                 <div class="de_count sm-mb30">
-                                    <img src="images/logo/" alt="">                                    
+                                    <img src="images/logo/enano.png" alt="">                                    
                                 </div>
                             </div>
 
