--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery.countdown.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/color.css" type="text/css">
 	<link rel="stylesheet" href="css/colors/orange.css" type="text/css">
@@ -855,7 +854,7 @@
                                                          </div>
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/kulemin.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><span>Кулемин Иван Николаевич</span><br> к.п.н., директор муниципального бюджетного образовательного учреждения “Средняя общеобразовательная школа № 80 им. В.С. Тарасова”, Ижевск</div>
                                                             <div class="sc-info">
                                                             <h3>Модель взаимодействия “Школа-техникум-вуз-предприятие” и ее роль в подготовке конкурентоспособных специалистов</h3>
@@ -1573,6 +1572,28 @@
                             </div>
                         </div>
 
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/orlova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Орлова Вера Вениаминовна</h3>
+                                <span class="subtitle2">Профессор, д.соц.н., доцент, и.о.заведующего кафедрой «Философии и социологии», ТУСУР, Томск</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/kulemin.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Кулемин Иван Николаевич</h3>
+                                <span class="subtitle2">К.п.н., директор муниципального бюджетного образовательного учреждения “Средняя общеобразовательная школа № 80 им. В.С. Тарасова”, Ижевск</span>
+                            </div>
+                        </div>
+
 
                     </div>
                 </div>
@@ -1829,10 +1850,7 @@
     <script src="js/jquery.plugin.js"></script>
     <script src="js/jquery.countdown.js"></script>
     <script src="js/countdown-custom.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAc5d1RS_0yWJ1Hyw2hGWfbRZ9KKaxFAZo"></script>
-    <script src="js/map.js"></script>
     <script src="js/designesia.js"></script>
-	<script src="js/validation.js"></script>
 
 </body>
 
