--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@
                                                             <div class="clearfix"></div>                                                       
                                                          </div>
 
-
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/komissarov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Комиссаров Андрей Александрович</span><br> директор направления «Развитие на основе данных», АНО «Университет 2035», Москва</h4></div>
@@ -855,7 +854,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/kulemin.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><span>Кулемин Иван Николаевич</span><br> к.п.н., директор муниципального бюджетного образовательного учреждения “Средняя общеобразовательная школа № 80 им. В.С. Тарасова”, Ижевск</div>
+                                                            <div class="sc-name"><h4><span>Кулемин Иван Николаевич</span><br> к.п.н., директор МБОУ “СОШ № 80 им. В.С. Тарасова”, Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Модель взаимодействия “Школа-техникум-вуз-предприятие” и ее роль в подготовке конкурентоспособных специалистов</h3>
                                                             </div> 
