--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@
                                                             <div class="clearfix"></div>
                                                          </div>
 
+                                                         <div class="schedule-item">                                                  
+                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>КРОХИНА Ирина Геннадьевна</span><br> первый заместитель министра образования и науки Удмуртской Республики, Ижевск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Приветственное слово первого заместителя министра образования и науки Удмуртской Республики</h3>
+                                                            </div>
+                                                            <div class="clearfix"></div>
+                                                         </div>
                                                         
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/molchanov.jpg" class="img-circle" alt=""></div>
@@ -803,6 +811,15 @@
                                                             <div class="sc-name"><h4><span>Мерецков Олег Вадимович</span><br> Эксперт по разработке электронных образовательных ресурсов ФИОП Роснано, Эксперт международных конкурсов электронных курсов EdCrunch, Москва</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Анализ тенденций развития цифровых компонент обучения в составе образовательных программ ДПО</h3>
+                                                            </div>
+                                                            <div class="clearfix"></div>
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>ГИМБИЦКИЙ Артур Вячеславович</span><br> Директор Корпоративного института КНИТУ-КАИ, Казань</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3></h3>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
